--- a/src/ContosoUniversityCore/ContosoUniversityCore.csproj
+++ b/src/ContosoUniversityCore/ContosoUniversityCore.csproj
@@ -49,8 +49,8 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <None Include="App_Data\**\*" CopyToOutputDirectory="PreserveNewest" />
-  </ItemGroup>
+  </ItemGroup>-->
 
 </Project>
