--- a/src/ContosoUniversityCore/ContosoUniversityCore.csproj
+++ b/src/ContosoUniversityCore/ContosoUniversityCore.csproj
@@ -9,6 +9,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="..\..\tools\rh.exe" Link="App_Data\rh.exe" />
+    <None Include="..\..\tools\rh.exe.config" Link="App_Data\rh.exe.config" />
     <None Include="App.config" />
     <None Update="wwwroot\**\*;Views;Areas\**\*.cshtml;Features\**\*.cshtml">
       <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
@@ -49,8 +51,8 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
-  <!--<ItemGroup>
+  <ItemGroup>
     <None Include="App_Data\**\*" CopyToOutputDirectory="PreserveNewest" />
-  </ItemGroup>-->
+  </ItemGroup>
 
 </Project>
