--- a/src/ContosoUniversityCore/ContosoUniversityCore.csproj
+++ b/src/ContosoUniversityCore/ContosoUniversityCore.csproj
@@ -49,11 +49,11 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <None Include="App_Data\**\*" CopyToOutputDirectory="PreserveNewest" />
     <None Include="deploy.ps1" CopyToOutputDirectory="PreserveNewest" />
     <None Include="..\..\tools\rh.exe" Link="App_Data\rh.exe" CopyToOutputDirectory="PreserveNewest" />
     <None Include="..\..\tools\rh.exe.config" Link="App_Data\rh.exe.config" CopyToOutputDirectory="PreserveNewest" />
-  </ItemGroup>
+  </ItemGroup>-->
 
 </Project>
